@@ -145,6 +145,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       not good enough as it needs a bit cleanup - coming up next.
     - deduplicate.sh: cleanup as announced in the last commit - using
       lazy_canonical_path.
+    - deduplicate.sh: remove a bit of noisy debug output, but turn on
+      parse_otool_output debugging.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
